# zsh-plugin-manager-benchmark

./: .gitignore  Cargo.toml  Dockerfile  README.md  bench.sh
.github/workflows/: benchmark.yml
results/: defer-antibody.json  defer-antigen.json  defer-sheldon.json  defer-zgen.json  defer-zinit.json  defer-zplug.json  install-antibody.json  install-antigen.json  install-sheldon.json  install-zgen.json  install-zinit.json  install-zplug.json  load-antibody.json  load-antigen.json  load-sheldon.json  load-zgen.json  load-zinit.json  load-zplug.json
src/: app.rs  main.rs
src/antibody/: zshrc-defer
src/normal/zinit/: zshrc
src/sheldon/: plugins-defer.toml
src/templates/antibody/: zshrc
src/templates/antigen/: zshrc
src/templates/sheldon/: zshrc
src/templates/sheldon/sheldon/: plugins-defer.toml  plugins.toml
src/templates/zgen/: zshrc
src/templates/zinit/: zshrc
src/templates/zplug/: zshrc
src/zgen/: zshrc-defer
