[package]
name = "zsh-plugin-manager-benchmark"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
structopt = "0.3.17"

[[bin]]
name = "bench"
path = "src/bin/main.rs"
